# haskell-shortener

./: LICENSE  README.md  shortener.cabal
src/: Main.hs
