name:                shortener
version:             0.1.0.0
synopsis:            A simple URL shortening service
description:         Please see README.md
homepage:            https://github.com/ccressent/haskell-shortener#readme
license:             BSD3
license-file:        LICENSE
author:              Cyril Cressent
maintainer:          cyril@cressent.org
copyright:           Copyright: (c) 2017 Cyril Cressent
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shortener
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hedis
                     , random
                     , scotty
                     , text
